FInal changes maybe
ready to fully publish?!

--- a/index.html
+++ b/index.html
@@ -32,36 +32,53 @@
         </section>
 
         <!-- SLIDE 2 -->
+        <section class="mySlides fs-img3" id="full-screen-image">
+
+            <h3 class="w3-container w3-display-topleft black-transparent w3-text-white w3-center w3-wide">Many are suffering from diseases every day...</h3>
+
+        </section>
+
+        <!-- SLIDE 2 -->
+        <section class="mySlides fs-img4" id="full-screen-image">
+
+            <h3 class="w3-container w3-display-bottomright black-transparent w3-text-white w3-center w3-wide">...but YOU can CHANGE this!</h3>
+
+        </section>
+
+
+        <!-- SLIDE 3 -->
         <section class="mySlides" id="two-row-slide" style="height: 100%;">
 
             <div class="w3-cell-row" style="height: 50%;">
-                <div class="w3-cell w3-container w3-mobile hs-img1" style="height: 100%;">
+                <div class="w3-cell w3-container w3-mobile hs-img1" style="height: 100%; width: 100%;">
                     <p class="yellowtext">The World Health Organization Flag</p>
                 </div>
             </div>
 
-            <div class="w3-cell-row" style="height: 50%;">
-                <div class="w3-cell w3-container w3-blue w3-mobile">
-                    <h2>The United Nations has created a goal to help improve universal health care. By 2030, the UN wants to achieve equal health care, </h2>
+            <div class="w3-cell-row w3-mobile" style="height: 50%;">
+                <div class="w3-cell w3-container w3-blue w3-mobile w3-center" style="height: 100%; width: 100%">
+                    <h2>The United Nations has created a goal to help improve universal health care. This goal was created because of the <i><u>dire need for all countries to have equal health care in order to prosper and prevent deaths.</u></i></h2>
                 </div>
             </div>
 
-        </section>
-
-        <!-- SLIDE 3 -->
-        <section class="mySlides" id="two-column-slide" style="height: 100%;">
-            <div class="w3-cell-row" style="height: 100%;">
-                <div class="w3-cell w3-container w3-green w3-mobile" style="width: 50%;">
-                    <h1>Solar Panels</h1>
-                    <p> Solar energy is awesome. Yay.</p>
-
-                </div>
-                <div class="w3-cell w3-container w3-blue w3-mobile hs-img2" style="height: 50%%;">
-                </div>
-            </div>
         </section>
 
         <!-- SLIDE 4 -->
+        <section class="mySlides" id="two-column-slide" style="height: 100%;">
+            <div class="w3-cell-row w3-mobile" style="height: 100%;">
+                <div class="w3-cell w3-display-container w3-indigo w3-mobile" style="width: 50%; height: 50%;">
+                    <div class="w3-display-middle w3-center w3-mobile">
+                        <h2>More than</h2>
+                        <h1>5 MILLION</h1>
+                        <h2> children still die before their fifth birthday each year.</h2>
+                    </div>
+                </div>
+                <div class="w3-cell w3-container w3-blue w3-mobile hs-img2" style="width: 50%; height: 50%">
+                </div>
+            </div>
+        </section>
+
+        <!-- SLIDE 5 -->
         <section class="mySlides" id="full-screen-video">
             <!-- The video -->
             <video autoplay muted loop id="myVideo">
@@ -70,13 +87,112 @@
 
             <!-- Optional: some overlay text to describe the video -->
             <div class="content">
-                <h1>Health is currently not equal.</h1>
-                <p>Lorem ipsum...</p>
+                <h3>Health care is also not accessible to many.</h3>
+                <p>Unfortunately, health care is currently not equal. Many underdeveloped countries are struggling with providing the proper medical care to its people.</p>
                 <!-- Use a button to pause/play the video with JavaScript -->
                 <button id="myBtn" onclick="myFunction()">Pause</button>
             </div>
         </section>
+
+        <!-- SLIDE 3 -->
+        <section class="mySlides" id="two-row-slide" style="height: 100%;">
+
+            <div class="w3-cell-row w3-mobile" style="height: 50%;">
+                <div class="w3-cell w3-display-container w3-blue w3-mobile w3-center" style="height: 100%; width: 100%">
+                    <div class="w3-display-middle w3-center w3-mobile">
+                        <h3>HIV/AIDS, malaria, and other diseases are still common and fatal.</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="w3-cell-row" style="height: 50%;">
+                <div class="w3-cell w3-container w3-mobile hs-img4" style="height: 100%; width: 100%;">
+                </div>
+            </div>
+
+        </section>
+
+
+        <!-- SLIDE 5 -->
+        <section class="mySlides" id="full-screen-video">
+            <!-- The video -->
+            <video autoplay muted loop id="myVideo">
+                <source src="img/working.mp4" type="video/mp4">
+            </video>
+
+            <!-- Optional: some overlay text to describe the video -->
+            <div class="content">
+                <h3>People cannot live healthy and productive lives without proper health care.</h3>
+            </div>
+        </section>
+
+
+        <!-- SLIDE 1 -->
+        <section class="mySlides fs-img5" id="full-screen-image">
+            <h1 class="w3-container w3-display-middle black-transparent w3-text-white w3-center w3-wide">"Healthy isn't a goal. It's a way of living.</h1>
+        </section>
+
+        <!-- SLIDE 4 -->
+        <section class="mySlides" id="two-column-slide" style="height: 100%;">
+            <div class="w3-cell-row w3-mobile" style="height: 100%;">
+                <div class="w3-cell w3-container w3-blue w3-mobile hs-img5" style="width: 50%; height: 50%">
+                </div>
+                <div class="w3-cell w3-display-container w3-indigo w3-mobile" style="width: 50%; height: 50%;">
+                    <div class="w3-display-middle w3-center w3-mobile">
+                        <h2>Only one-half of all women in developing regions have access to the health care they need to live functioning lives.</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- SLIDE 1 -->
+        <section class="mySlides fs-img6" id="full-screen-image">
+            <h1 class="w3-container w3-top black-transparent w3-text-white w3-center w3-wide">How does it affect YOU?</h1>
+        </section>
+
+        <!-- SLIDE 5 -->
+        <section class="mySlides" id="full-screen-video">
+            <!-- The video -->
+            <video autoplay muted loop id="myVideo">
+                <source src="img/city.mp4" type="video/mp4">
+            </video>
+
+            <!-- Optional: some overlay text to describe the video -->
+            <div class="content">
+                <h3>Healthy lives allows prosperous societies.</h3>
+            </div>
+        </section>
+
+        <!-- SLIDE 3 -->
+        <section class="mySlides" id="two-row-slide" style="height: 100%;">
+
+            <div class="w3-cell-row" style="height: 65%;">
+                <div class="w3-cell w3-container w3-mobile hs-img6" style="height: 100%; width: 100%;">
+                </div>
+            </div>
+
+            <div class="w3-cell-row w3-mobile" style="height: 35%;">
+                <div class="w3-cell w3-container w3-blue w3-mobile w3-center" style="height: 100%; width: 100%">
+                    <h2>Bringing awareness to mental health is also important, especially for high school students because of the amount of pressure and stress they are under.</h2>
+                </div>
+            </div>
+
+        </section>
         
+        <!-- SLIDE 3 -->
+        <section class="mySlides" style="height: 100%;">
+            <div class="w3-indigo" style="height:100%;">
+                <h1 class="w3-center w3-display-middle">The rate of mental health is continuing to rise from 11.93% to 12.63% in the past year.</h1>
+            </div>
+        </section>
+        
+        <!-- LAST SLIDE -->
+        <section class="mySlides fs-img4" id="full-screen-image">
+
+            <h2 class="w3-container w3-display-bottommiddle black-transparent w3-text-white w3-wide w3-center"><a href="https://internationalmedicalcorps.org/" target="blank">Click here to help make a difference!</a></h2>
+
+        </section>
+
 
         <!-- slideshow arrow indicators -->
         <button class="w3-button w3-display-left w3-gray w3-xxlarge w3-text-white" onclick="plusDivs(-1)">&#x25c0;</button>
